--- a/mongo-compose.yml
+++ b/mongo-compose.yml
@@ -4,7 +4,7 @@ services:
 
   mongo:
     image: mongo
-    container_name: mongo-container
+    container_name: mongo-gRPC
     ports:
       - 27018:27017
     volumes:
